# selinux-configfile

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-18-selinux-configfile.md
docs/superpowers/specs/: 2026-05-18-selinux-configfile-design.md
examples/: basic_read_write.rs  format_preservation.rs  validation.rs
src/: config_file.rs  error.rs  io.rs  lib.rs  parser.rs  serializer.rs  types.rs
tests/: config_file_tests.rs  edge_cases.rs  error_tests.rs  integration_tests.rs  io_tests.rs  official_parity.rs  parser_tests.rs  serializer_tests.rs  types_tests.rs
